@@ -1,4 +1,7 @@
 
+* Fix error msg to base constructors (msg count is wrong)
+* Make check for 'self' a list instead of a string
+* Add option to ignore all warnings in standard library
 * Add check for except: pass
 * Add check that when calling base class __init__(), self is first arg
 * Add check for multiple functions/methods/classes w/same name
